--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -79,8 +79,10 @@
 
         body {
             font-size: 1.6rem;
-            font-family: var(--font-primary);
-            background: var(--color-gray-1);
+            font-family: sans-serif;
+            /* font-family: var(--font-primary); */
+            background: #e0e0e0;
+            /* background: var(--color-gray-1); */
         }
 
         h1,
@@ -89,22 +91,26 @@
         h4,
         h5,
         h6 {
-            font-family: var(--font-headings);
+            /* font-family: var(--font-headings); */
+            font-family: 'Roboto Slab', serif;
         }
 
         .container {
             max-width: 144rem;
             margin: 0 auto;
-            padding: var(--spacing-gutter-medium);
+            /* padding: var(--spacing-gutter-medium); */
+            padding: 3rem;
         }
 
         .main-header-container {
-            background: var(--color-primary-dark);
+            /* background: var(--color-primary-dark); */
+            background: #13141f;
         }
 
         .main-logo {
             font-size: 4rem;
-            color: var(--color-white);
+            /* color: var(--color-white); */
+            color: #fff;
             text-decoration: none;
             display: flex;
             flex-flow: row nowrap;
@@ -148,17 +154,21 @@
         }
 
         .search-button:focus {
-            outline: 1px solid var(--color-primary);
+            /* outline: 1px solid var(--color-primary); */
+            outline: 1px solid #269fe6;
             background: rgba(0, 0, 0, .05);
         }
 
         .search-form:focus-within {
-            border-color: var(--color-primary);
-            background: var(--color-white)
+            /* border-color: var(--color-primary); */
+            border-color: #269fe6;
+            /* background: var(--color-white); */
+            background: #fff;
         }
 
         .search-form:focus-within .search-button {
-            color: var(--color-primary);
+            /* color: var(--color-primary); */
+            color: #269fe6;
         }
 
         .main-content {
@@ -168,7 +178,27 @@
         .main-content-list {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmanx(340px, 1fr));
-            gap: var(--spacing-gutter-large)
+            /* gap: var(--spacing-gutter-large); */
+            gap: 4rem;
+        }
+
+        .recipe {
+            background: #fff;
+            box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
+            transform: scale(1);
+            transition: all 300ms ease-in-out;
+        }
+
+        .recipe img {
+            max-width: 100%;
+        }
+
+        .recipe-list-item {
+            max-width: 64rem;
+        }
+
+        .recipe-list-item:hover {
+            transform: scale(1.01);
         }
     </style>
 </head>
