--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -83,6 +83,8 @@
             /* font-family: var(--font-primary); */
             background: #e0e0e0;
             /* background: var(--color-gray-1); */
+            /* color: var(--color-dark-text); */
+            color: #444;
         }
 
         h1,
@@ -198,7 +200,43 @@
         }
 
         .recipe-list-item:hover {
-            transform: scale(1.01);
+            transform: scale(1.02);
+            box-shadow: -8px 8px 18px rgba(0, 0, 0, .25);
+        }
+
+        .recipe-title-container {
+            /* padding: var(--spacing-gutter-medium); */
+            padding: 3rem;
+            padding-bottom: 2rem;
+        }
+
+        .recipe-author {
+            /* padding: 0 var(--spacing-gutter-medium); */
+            padding: 0 3rem;
+        }
+
+        .recipe-content {
+            /* padding: var(--spacing-gutter-medium); */
+            padding: 3rem;
+            padding-top: 2rem;
+        }
+
+        .recipe-author-item {
+            /* color: var(--color-gray-4); */
+            color: #959595;
+            margin-right: 1rem
+        }
+
+        .recipe-author a {
+            /* color: var(--color-primary); */
+            color: #269fe6;
+            transition: all 300ms ease-in-out;
+            text-decoration: none;
+        }
+
+        .recipe-author a:hover {
+            /* color: var(--color-primary-dark); */
+            color: #13141f;
         }
     </style>
 </head>
