--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -179,7 +179,7 @@
 
         .main-content-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmanx(340px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
             /* gap: var(--spacing-gutter-large); */
             gap: 4rem;
         }
@@ -189,6 +189,8 @@
             box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
             transform: scale(1);
             transition: all 300ms ease-in-out;
+            border-radius: .4rem;
+            overflow: hidden;
         }
 
         .recipe img {
@@ -237,6 +239,44 @@
         .recipe-author a:hover {
             /* color: var(--color-primary-dark); */
             color: #13141f;
+        }
+
+        .recipe-meta-container {
+            display: flex;
+            flex-flow: row wrap;
+            /* padding: var(--spacing-gutter-medium); */
+            padding: 3rem;
+            /* background: var(--color-gray-1); */
+            background: #e0e0e0;
+        }
+
+        .recipe-meta {
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .recipe-meta-title {
+            font-size: 1.6rem;
+        }
+
+        .recipe-footer a {
+            /* background: var(--color-primary-dark); */
+            background: #13141f;
+            display: block;
+            /* color: var(--color-white); */
+            color: #fff;
+            text-decoration: none;
+            text-align: center;
+            /* padding: 1.5rem var(--spacing-gutter-medium); */
+            padding: 1.5rem 3rem;
+            transition: all 300ms ease-in-out
+        }
+
+        .recipe-footer a:hover {
+            filter: brightness(2);
         }
     </style>
 </head>
