--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -278,5 +278,28 @@
         .recipe-footer a:hover {
             filter: brightness(2);
         }
+
+        .main-footer {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            /* background: var(--color-primary-dark); */
+            background: #13141f;
+            /* color: var(--color-white); */
+            color: #fff;
+            /* padding: var(--spacing-gutter-large); */
+            padding: 4rem;
+        }
+
+        .main-footer a {
+            /* color: var(--color-white); */
+            color: #fff;
+            text-decoration: none;
+            transition: all 300ms ease-in-out;
+        }
+
+        .main-footer a:hover {
+            filter: brightness(.8)
+        }
     </style>
 </head>
